app/page.module.css
.main {
  background-color: var(--surface-color-2);
  max-width: 900px;
  margin: auto;
  height: 100vh;
  max-height: 100vh;
  display: flex;
  flex-direction: column;
  box-shadow: var(--common-box-shadow);
  /* border: 1px solid var(--surface-color-3); */

  --headerHeight: 70px;
  --footerHeight: 70px;
  overflow: hidden;
}

.header {
  height: var(--headerHeight);
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  box-shadow: var(--common-box-shadow);
}

.conversationConteiner {
  flex: 1 1 0px;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 1rem;
  overflow: auto;
}

.messageBox {
  background-color: var(--surface-color-1);
  box-shadow: var(--common-box-shadow);
  border-radius: var(--br-l);
  padding: 0.75rem 1rem;
  width: fit-content;
  max-width: 70%;
}

.messageBox.outgoing {
  background-color: var(--primary-color-3);
  color: var(--surface-color-1);
  align-self: flex-end;
}

.messageBox.error {
  align-self: flex-end;
  color: red;
  border: 1px solid;
  background-color: var(--primary-color-1);
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.repeatButton {
  box-shadow: var(--common-box-shadow);
  background-color: var(--primary-color-1);
  width: 2rem;
  height: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  border: none;
  cursor: pointer;
  border: 1px solid red;
  position: absolute;
  left: 0;
  top: 50%;
  transform: translate(calc(-100% - 0.5rem), -50%);
}

